--- a/JavaPRO/src/main/resources/static/css/style.css
+++ b/JavaPRO/src/main/resources/static/css/style.css
@@ -19,9 +19,15 @@ figure {
 }
 #fixed {
     /*background-image: url('static/img/fixed-background.jpg');*/
-    height: 400px;
+    height: 300px;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    filter: opacity(70%);
+    filter: blur(2px);
+
+}
+.karta{
+    justify-content: center;
 }
