--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>TEMATY PROJEKTÓW</title>
+    <title>PROjekt JavaPRO</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js%22%3E"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -39,26 +39,8 @@
         </div>
     </div>
 </nav>
-<!--Jumbotron/Dymek-->
-<div class="container-fluid">
-    <div class="row jumbotron">
-        <div class="jumbotron-napis col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-            <p class="lead">
-                Tutaj będzie napis o czym jest projekt i że stworzony na potrzeby PROkopa.
-                Tutaj będzie napis o czym jest projekt i że stworzony na potrzeby PROkopa.
-                Tutaj będzie napis o czym jest projekt i że stworzony na potrzeby PROkopa.
-            </p>
-        </div>
-        <div class="jumbotron-przycisk col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-            <a href="#">
-                <button type="button" class="btn btn-outline-secondary btn-lg">
-                    Stona domowa PROkopa
-                </button>
-            </a>
-        </div>
-    </div>
-</div>
-<!--Slajd tytułowy-->
+
+<!--Nagłówek - teamty-->
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
@@ -77,47 +59,17 @@
 <!--Tabela tematów-->
 <div class="container-fluid">
     <table class="table table-hover">
-        <thead class="thead-dark">
+        <thead class="thead-dark text-center">
         <tr>
-            <th scope="col">#</th>
-            <th scope="col">Temat projektu</th>
-            <th scope="col">Opis</th>
-            <th scope="col">Czy zarezerwowany</th>
+            <th scope="col-1">#</th>
+            <th scope="col-4">Temat projektu</th>
+            <th scope="col-4">Opis</th>
+            <th scope="col-3">Czy zarezerwowany</th>
         </tr>
         </thead>
         <tbody>
         <tr>
             <th scope="row">1</th>
-            <td>Lucynka</td>
-            <td>Pałkuska</td>
-            <td>idk_men</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Lucynka</td>
-            <td>Pałkuska</td>
-            <td>idk_men</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Lucynka</td>
-            <td>Pałkuska</td>
-            <td>idk_men</td>
-        </tr>
-        <tr>
-            <th scope="row">4</th>
-            <td>Lucynka</td>
-            <td>Pałkuska</td>
-            <td>idk_men</td>
-        </tr>
-        <tr>
-            <th scope="row">5</th>
-            <td>Lucynka</td>
-            <td>Pałkuska</td>
-            <td>idk_men</td>
-        </tr>
-        <tr>
-            <th scope="row">6</th>
             <td>Lucynka</td>
             <td>Pałkuska</td>
             <td>idk_men</td>
@@ -130,14 +82,26 @@
 <!--Background image-->
 <figure>
     <div class="fixed-wrap">
-        <div id="fixed" style="background-image: url('../img/fixed-background.jpeg');">
+        <div id="fixed" style="background-image: url('../img/fixed-background-4.jpg');">
             <!--            <img src="/img/fixed-background.jpg">-->
         </div>
     </div>
 </figure>
 <hr class="my-4">
 
-<!--Nasz team-->
+<!--Nagłówek - autorzy-->
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">
+                O nas
+            </h1>
+        </div>
+        <hr class="my-4">
+    </div>
+</div>
+
+<!--Autorzy-->
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6">
@@ -154,6 +118,76 @@
     <hr class="my-4">
 </div>
 
+<!--Background image-->
+<figure>
+    <div class="fixed-wrap">
+        <div id="fixed" style="background-image: url('../img/fixed-background-2.jpg');">
+            <!--            <img src="/img/fixed-background.jpg">-->
+        </div>
+    </div>
+</figure>
+<hr class="my-4">
+
+<!--Nagłówek - prowadzący-->
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">
+                Prowadzący
+            </h1>
+        </div>
+        <hr class="my-4">
+    </div>
+</div>
+<!--Karta Prowadzącego-->
+<div class="container-fluid padding">
+    <div class="row padding karta">
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top center" src="/img/prowadzacy.jpg" alt="Fot. Marian Misiakiewicz">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        dr hab. inż. prof. PRz Jan Prokop
+                    </h4>
+                    <p class="card-text">
+                        Nauczyciel akademicki zatrudniony jako pracownik badawczo-dydaktyczny na stanowisku profesora uczelni na Wydziale Elektrotechniki i Informatyki Politechniki Rzeszowskiej.
+                    </p>
+                    <a href="http://jprokop.prz.edu.pl/#/" class="btn btn-secondary">Wyświetl stronę</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr class="my-4">
+
+<!--Background image-->
+<figure>
+    <div class="fixed-wrap">
+        <div id="fixed" style="background-image: url('../img/fixed-background-3.jpg');">
+            <!--            <img src="/img/fixed-background.jpg">-->
+        </div>
+    </div>
+</figure>
+<hr class="my-4">
+<!--Jumbotron/Dymek-->
+<!--<div class="container-fluid">-->
+<!--    <div class="row jumbotron">-->
+<!--        <div class="jumbotron-napis col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">-->
+<!--            <p class="lead">-->
+<!--                Tutaj będzie napis o czym jest projekt i że stworzony na potrzeby PROkopa.-->
+<!--                Tutaj będzie napis o czym jest projekt i że stworzony na potrzeby PROkopa.-->
+<!--                Tutaj będzie napis o czym jest projekt i że stworzony na potrzeby PROkopa.-->
+<!--            </p>-->
+<!--        </div>-->
+<!--        <div class="jumbotron-przycisk col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">-->
+<!--            <a href="#">-->
+<!--                <button type="button" class="btn btn-outline-secondary btn-lg">-->
+<!--                    Stona domowa PROkopa-->
+<!--                </button>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <!--Footer-->
 <footer>
     <div class="container-fluid padding">
