--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>PROjekt JavaPRO</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <img src="/img/logo.png">
         </a>
         <!--przycisk z ikoną menu-->
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbar" aria-expanded="false">
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbar" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
