--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -8,8 +8,8 @@
 <!--Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand logo" href="#">
-            <img src="/img/logo.png">
+        <a class="navbar-brand" href="/">
+            <img class="logo" src="/img/logo.png">
         </a>
         <!--przycisk z ikoną menu-->
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbar" aria-expanded="false">
@@ -18,17 +18,17 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Strona główna</a>
+                    <a class="nav-link" href="/">Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Konto</a>
+                    <a class="nav-link" href="#">Konto</a> <!--jeszcze tu podpiac stronke-->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Zaloguj</a>
+                    <a class="nav-link" href="login">Zaloguj</a>
                 </li>
                 <!--albo-->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Wyloguj</a>
+                    <a class="nav-link" href="logout">Wyloguj</a>
                 </li>
             </ul>
         </div>
