--- a/JavaPRO/src/main/resources/templates/login.html
+++ b/JavaPRO/src/main/resources/templates/login.html
@@ -35,6 +35,7 @@
             <button class="btn btn-lg btn-primary col-xs-6 col-sm-4">Zaloguj</button>
         </div>
     </form>
+    <p th:if="${loginError}" class="error">Login Ci nie wyszedł mordo</p>
 </div>
 
 
