--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -35,18 +35,18 @@
     <table class="table table-hover">
         <thead class="thead-dark text-center">
         <tr>
-            <th scope="col-1">#</th>
-            <th scope="col-4">Temat projektu</th>
-            <th scope="col-4">Opis</th>
-            <th scope="col-3">Czy zarezerwowany</th>
+            <th class="table-center" style="width: 5%" scope="col">#</th>
+            <th class="table-center" style="width: 45%" scope="col">Temat projektu</th>
+            <th class="table-center" style="width: 50%" scope="col">Opis</th>
+            <th class="table-center" style="width: 10%" scope="col">Czy zarezerwowany</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <th scope="row">1</th>
+            <th scope="row" class="table-center">1</th>
             <td>Lucynka</td>
             <td>Pałkuska</td>
-            <td>idk_men</td>
+            <td class="table-center">idk_men</td>
         </tr>
         </tbody>
     </table>
