--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -21,14 +21,14 @@
                     <a class="nav-link" href="/">Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Konto</a> <!--jeszcze tu podpiac stronke-->
+                    <a class="nav-link" href="/account">Konto</a> <!--jeszcze tu podpiac stronke-->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login">Zaloguj</a>
+                    <a class="nav-link" href="/login">Zaloguj</a>
                 </li>
                 <!--albo-->
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">Wyloguj</a>
+                    <a class="nav-link" href="/logout">Wyloguj</a>
                 </li>
             </ul>
         </div>
