--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
 <!--Background image-->
 <figure>
     <div class="fixed-wrap">
-        <div id="fixed" style="background-image: url('../img/fixed-background-4.jpg');">
+        <div id="fixed" style="background-image: url('../img/fixed-background-4.jpg'); filter:blur(0px);">
             <!--            <img src="/img/fixed-background.jpg">-->
         </div>
     </div>
