--- a/JavaPRO/src/main/resources/templates/login.html
+++ b/JavaPRO/src/main/resources/templates/login.html
@@ -41,8 +41,7 @@
         <label for="password" class="sr-only"></label>
         <input type="password" id="password" placeholder="Hasło" name="password" class="form-control mt-2" required>
         <div class="login-btn mt-3 mb-5">
-            <button class="btn btn-lg btn-secondary col-xs-6 col-sm-4" href="/register">Rejestracja</button>
-            <input type="submit" value="Weź se nospe" class="btn btn-lg btn-primary col-xs-6 col-sm-4">Zaloguj</input>
+            <input type="submit" value="Zaloguj" class="btn btn-lg btn-primary col-xs-6 col-sm-4"/>
         </div>
     </form>
     <p th:if="${loginError}" class="error">Login Ci nie wyszedł mordo</p>
