--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -26,6 +26,9 @@
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" href="/login">Zaloguj</a>
                 </li>
+                <li class="nav-item" sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/register">Rejestracja</a>
+                </li>
                 <!--albo-->
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" href="/logout">Wyloguj</a>
