--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -44,11 +44,15 @@
         </thead>
         <tbody>
         <tr th:each="temat : ${tematy}">
-            <th scope="row" class="table-center">1</th>
-            <td th:text="${temat.getName()}">Lucynka</td>
-            <td th:text="${temat.getDescription()}">Pałkuska</td>
-            <td class="table-center" th:text="${temat.getIsReserved()}">idk_men</td>
-            <td class="table-center" sec:authorize="hasRole('ROLE_USER')">Tak mamo</td>
+            <th scope="row" class="table-center" th:text="${temat.getId()}"></th>
+            <td th:text="${temat.getName()}"></td>
+            <td th:text="${temat.getDescription()}"></td>
+            <td class="table-center" th:text="${temat.getIsReserved()}"></td>
+            <td class="table-center" sec:authorize="hasRole('ROLE_USER')">
+                <a>
+                    <button class="btn btn-sm btn-primary">+</button>
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
