--- a/JavaPRO/src/main/resources/templates/account.html
+++ b/JavaPRO/src/main/resources/templates/account.html
@@ -31,7 +31,7 @@
         <tbody class="thead-dark text-center">
         <tr >
             <th colspan="2">
-                <h3  th:text="Informacje o projekcie + ${i.index}">
+                <h3  th:text="${'Informacje o projekcie #' + {i.index+1}}">
 
                 </h3>
             </th>
