--- a/JavaPRO/src/main/resources/templates/index.html
+++ b/JavaPRO/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
             <th class="table-center" style="width: 5%" scope="col">#</th>
             <th class="table-center" style="width: 45%" scope="col">Temat projektu</th>
             <th class="table-center" style="width: 50%" scope="col">Opis</th>
-            <th class="table-center" style="width: 10%" scope="col">Czy zarezerwowany</th>
+            <th class="table-center" style="width: 10%" scope="col">Wolny</th>
             <th class="table-center" style="width: 10%" scope="col" sec:authorize="hasRole('ROLE_USER')">Zarezerwuj</th>
         </tr>
         </thead>
@@ -47,10 +47,13 @@
             <th scope="row" class="table-center" th:text="${temat.getId()}"></th>
             <td th:text="${temat.getName()}"></td>
             <td th:text="${temat.getDescription()}"></td>
-            <td class="table-center" th:text="${temat.getIsReserved()}"></td>
+            <td class="table-center" th:text="${temat.getIsReserved() ? 'Nie' : 'Tak'}"></td>
             <td class="table-center" sec:authorize="hasRole('ROLE_USER')">
                 <a>
-                    <button class="btn btn-sm btn-primary">+</button>
+                    <button class="btn btn-sm btn-secondary disabled" th:if="${temat.getLiczbaOsob()>2}" >+</button>
+                    <form th:action="${'/zarezerwujTemat/'+temat.getId()}">
+                        <button class="btn btn-sm btn-primary" th:unless="${temat.getLiczbaOsob()>2}" >+</button>
+                    </form>
                 </a>
             </td>
         </tr>
