Kto się spodziewał?

--- a/JavaPRO/src/main/resources/templates/footer.html
+++ b/JavaPRO/src/main/resources/templates/footer.html
@@ -35,7 +35,7 @@
                 <hr class="light">
                 <p>Łucja Pałkus</p>
                 <p>160787@stud.prz.edu.pl</p>
-                <p>&nbsp;</p>
+                <p style="color:#373737">Nikt się jej nie spodziewał</p>
                 <p>Adam Szałański</p>
                 <p>164018@stud.prz.edu.pl</p>
             </div>
