Rejestracja podPięta(lem)

--- a/JavaPRO/src/main/resources/templates/register.html
+++ b/JavaPRO/src/main/resources/templates/register.html
@@ -44,7 +44,7 @@
         </div>
     </form>
     <p th:if="${registerSuccess}" class="success">Rejestracja przebiegła pomyślnie!</p>
-    <p th:if="${passwordDontMatch}" class="error">Podano różne hasła</p>
+    <p th:if="${passwordNotMatch}" class="error">Podano różne hasła</p>
 </div>
 
 
