--- a/JavaPRO/src/main/resources/templates/login.html
+++ b/JavaPRO/src/main/resources/templates/login.html
@@ -44,7 +44,7 @@
             <input type="submit" value="Zaloguj" class="btn btn-lg btn-primary col-xs-6 col-sm-4"/>
         </div>
     </form>
-    <p th:if="${loginError}" class="error">Login Ci nie wyszedł mordo</p>
+    <p th:if="${loginError}" class="error">Logowanie nie powiodło się</p>
 </div>
 
 
