front: modal z komunikatem do przycisku "+"

--- a/JavaPRO/src/main/resources/templates/account.html
+++ b/JavaPRO/src/main/resources/templates/account.html
@@ -64,7 +64,7 @@
             </td>
             <td th:if="${projekt.getFileUrl()!=null}">
                 <a th:href="${projekt.getFileUrl()}">
-                    Pobierz plik
+                    <button class="btn btn-sm btn-primary">Pobierz plik</button>
                 </a>
             </td>
         </tr>
