--- a/JavaPRO/src/main/resources/templates/navbar.html
+++ b/JavaPRO/src/main/resources/templates/navbar.html
@@ -21,7 +21,10 @@
                     <a class="nav-link" href="/">Strona główna</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/account">Konto</a> <!--jeszcze tu podpiac stronke-->
+                    <a class="nav-link" href="/account">Konto</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" href="/adminPanel">Konto</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" href="/login">Zaloguj</a>
